# Matcha

./: .clang-format  .clang-tidy  .clangd  .gitignore  .markdownlint.json
Matcha/: .gitignore  CMakeLists.txt  CMakeLists.txt.bak  CMakePresets.json  README.md
Matcha/Demos/NyanCad/: DetectionFailureArea.cpp  DetectionFailureArea.h  DetectionFreedomEdge.cpp  DetectionFreedomEdge.h  DetectionInterference.cpp  DetectionInterference.h  DetectionRepeat.cpp  DetectionRepeat.h  DocumentView.cpp  DocumentView.h  LayerDemo.cpp  LayerDemo.h  NyanCadApp.cpp  NyanCadApp.h  NyanCadDocument.cpp  NyanCadDocument.h  NyanCadMainWindow.cpp  NyanCadMainWindow.h  NyanCadWorkshopSetup.cpp  NyanCadWorkshopSetup.h  main.cpp
Matcha/Demos/NyanCad/Diagnostics/: LayoutBoundsOverlay.cpp  LayoutBoundsOverlay.h  NyanCadDevToolsWindow.cpp  NyanCadDevToolsWindow.h  WidgetPickerFilter.cpp  WidgetPickerFilter.h
Matcha/Demos/NyanCad/MeshEditors/: NyanFwSketchEditor.cpp  NyanFwSketchEditor.h  NyanFwSurfaceMeshEditor.cpp  NyanFwSurfaceMeshEditor.h  NyanFwTetMeshEditor.cpp  NyanFwTetMeshEditor.h
Matcha/Include/Matcha/Animation/: AnimationBlendLayer.h  ChoreographyEngine.h  CompositionTemplate.h  IAnimationService.h  InteractionTimingRegistry.h  SharedElementTransition.h
Matcha/Include/Matcha/CApi/: NyanCApi.h
Matcha/Include/Matcha/Core/: ErrorCode.h  FixedString.h  Observable.h  PropertyBinding.h  StateMachine.h  StringId.h  Types.h
Matcha/Include/Matcha/DSL/: Blueprint.h
Matcha/Include/Matcha/Event/: BaseObject.h  CommandNode.h  EventNode.h  MetaClass.h  Notification.h  NotificationQueue.h
Matcha/Include/Matcha/Feedback/: ContentStateModel.h  DestructiveActionPolicy.h  EdgeCaseGuard.h  ErrorBoundary.h  FeedbackPolicy.h  NotificationStackManager.h
Matcha/Include/Matcha/Foundation/: AnimationBlendLayer.h  BreakpointObserver.h  ChoreographyEngine.h  CompositionTemplate.h  ContentStateModel.h  ContextMenuComposer.h  ContextualHelpService.h  DestructiveActionPolicy.h  DragDropVisual.h  DtcgTokenModel.h  EdgeCaseGuard.h  ErrorBoundary.h  FeedbackPolicy.h  FormValidator.h  GestureMotionTracker.h  InteractionTimingRegistry.h  KeyboardContract.h  LayoutEngine.h  Macros.h  NotificationStackManager.h  ScrollPhysics.h  SharedElementTransition.h  ShortcutManager.h  StrongId.h  VariantNameRegistry.h  WidgetFsm.h  WidgetFsmBridge.h
Matcha/Include/Matcha/Interaction/: ContextMenuComposer.h  ContextualHelpService.h  DragDropVisual.h  DropZoneOverlay.h  FormValidator.h  PopupPositioner.h
Matcha/Include/Matcha/Services/: DocumentManager.h  IDocumentManager.h  IExpansionPlugin.h  IViewportRenderer.h  PluginHost.h
Matcha/Include/Matcha/Theming/: A11yAudit.h  DesignTokens.h  IThemeService.h  NyanTheme.h  ResolvedStyle.h  ThemeAware.h  WidgetStyleSheet.h
Matcha/Include/Matcha/Tree/: ContainerNode.h  PopupNode.h  TooltipSpec.h  UiNode.h  UiNodeNotification.h  UiNodeQuery.h  UpdateGuard.h  WidgetNode.h  WidgetNotification.h  WidgetWrapper.h
Matcha/Include/Matcha/Widgets/: WidgetStyleSheet.h
Matcha/Resources/: tokens_schema.json
Matcha/Resources/Themes/: Dark.json  Light.json
Matcha/Scripts/: generate_icons.py  reorganize.ps1  update_cmake.ps1  validate_tokens.py
Matcha/Source/Animation/: AnimationBlendLayer.cpp  AnimationService.cpp  AnimationService.h  AnimationServiceGlobal.cpp  ChoreographyEngine.cpp  CompositionTemplate.cpp  InteractionTimingRegistry.cpp  SharedElementTransition.cpp  SpringAnimation.h  StateTransition.cpp  StateTransition.h
Matcha/Source/CApi/: NyanCApi.cpp
Matcha/Source/Core/: Placeholder.cpp
Matcha/Source/DSL/: Materializer.cpp
Matcha/Source/Event/: BaseObject.cpp  CommandNode.cpp  EventNode.cpp  Notification.cpp  NotificationQueue.cpp
Matcha/Source/Feedback/: ContentStateModel.cpp  DestructiveActionPolicy.cpp  EdgeCaseGuard.cpp  ErrorBoundary.cpp  FeedbackPolicy.cpp  NotificationStackManager.cpp
Matcha/Source/Foundation/: Placeholder.cpp
Matcha/Source/Interaction/: ContextMenuComposer.cpp  ContextMenuRequest.cpp  ContextualHelpService.cpp  DragDropVisual.cpp  DropZoneOverlay.cpp  FormValidator.cpp  PopupPositioner.cpp
Matcha/Source/Interaction/Focus/: FocusChain.cpp  FocusManager.cpp  MnemonicManager.cpp  MnemonicManagerGlobal.cpp  MnemonicState.cpp  MnemonicStateGlobal.cpp
Matcha/Source/Interaction/Input/: GestureMotionTracker.cpp  KeyboardContract.cpp  ScrollPhysics.cpp  ShortcutManager.cpp
Matcha/Source/Interaction/Selection/: SelectionModel.cpp
Matcha/Source/Services/: DocumentManager.cpp  PluginHost.cpp
Matcha/Source/Theming/: A11yAudit.cpp  NyanTheme.cpp  SvgIconProvider.h  ThemeAware.cpp  ThemeServiceGlobal.cpp
Matcha/Source/Theming/Palette/: ContrastChecker.cpp  TonalPaletteGenerator.cpp
Matcha/Source/Tree/: ContainerNode.cpp  PopupNode.cpp  UiNode.cpp  UiNodeQuery.cpp  UpdateGuard.cpp  WidgetNode.cpp  WidgetWrapper.cpp
Matcha/Tests/Fixtures/: CustomExtends.json  HighContrast.json
Matcha/Tests/Integration/: ActionBarDockTest.cpp  CApiIntegrationTest.cpp  DocumentLifecycleTest.cpp  NyanCadDocumentTest.cpp  NyanCadPluginTest.cpp  NyanCadSmokeTest.cpp  PluginIntegrationTest.cpp  ShellWiringTest.cpp  WidgetTreeTraverserTest.cpp  WorkbenchManagerTest.cpp  main.cpp
Matcha/Tests/TestUtils/: MockPlugin.cpp  MockPlugin.h  MockRenderer.h  QtAppGuard.h  SignalSpyHelper.h  WidgetTestFixture.h
Matcha/Tests/Unit/: main.cpp
Matcha/Tests/Widget/: ApplicationWidgetTest.h  ContainerNodeTest.h  ContainerWidgetTest.h  CoreWidgetTest.h  DialogNodeTest.h  MenuBarTest.cpp  MenuBarTest.h  OverlayTest.h  ShellWindowTest.h  ThemeTest.h  UiNodeWidgetTest.h  ViewportFocusTest.h  ViewportFrameTest.h  ViewportGroupWidgetTest.h  ViewportWidgetTest.h  WidgetTestFixtureTest.h  main.cpp
Matcha/docs/: COCAUI_Design_System_Specification.md  Matcha_Design_System_Specification.html  Matcha_Design_System_Specification.md  Matcha_Design_System_Specification.md.bak  New_Feature_Audit_2026Q1.md  _check.ps1  doc_plan.md  export_html.ps1  gen_result2.txt  plan2.md  restructure_spec.py  scan_result.txt
Matcha/docs/playground/: base.css  index.html  tokens.css
(+695 files in other folders)
